@startuml
skinparam shadowing false
skinparam line type polyline

package UI {
class ListTaskSpaceUI {
    - controller : ListTaskController
}
}

package CONTROLLER {
class ListTaskController {
    - repositories: Repositories
    - collaborator : CollaboratorRepository
    - greenSpaceRepository : GreenSpaceRepository
    - entryRepository : EntryRepository
    + getCollaboratorTroughEmail(String email) : Collaborator
    + ListTaskController()
    + getTeamTroughCLB(Collaborator clb) : Team
    + getDatesList(LocalDate beginningDate, LocalDate endDate, Collaborator collaborator) : List<AgendaEntryDto>
    + getAgendaEntries(UserSession session) : List<AgendaEntryDto>
}
}

package DOMAIN {
package REPOSITORY {
class Repositories {
    - instance : Repositories
    - greenSpaceRepository : GreenSpaceRepository
    - entryRepository : EntryRepository
    + getInstance() : Repositories
    + getGreenSpaceRepository() : GreenSpaceRepository
    + getEntryRepository() : EntryRepository
}

class GreenSpaceRepository {
    + getGreenSpaceList() : List<GreenSpace>
}

class EntryRepository {
    + createEntry(greenSpace: GreenSpaceDTO, description: String, urgency: UrgencyStatus, expectedDuration: int) : Entry
}
}
package MODEL{
class AgendaEntry {
    - title : String
    - description : String
    - duration : int
    - urgency : UrgencyStatus
    - greenSpace : GreenSpaceDTO
    - startingDate : LocalDate
    - progressStatus : ProgressStatus

    +AgendaEntry(String title, String description, int duration, UrgencyStatus urgencyStatus, GreenSpace greenSpace,
                            LocalDate startingDate, ProgressStatus progressStatus)
    + setAvailable(agendaEntry , AgendaEntry) : void
}

enum UrgencyStatus{
+HIGH
+MEDIUM
+LOW
}
}
}
package DTO{
    class GreenSpaceDto{
        - name : String
        - type : GreenSpaceType
        - area : Double
        - manager : String
        - address : String
        - city : String
        - zipCode : String
        + getName() : String
        + getType() : GreenSpaceType
        + getArea() : Double
        + getManager() : String
        + getAddress() : String
        + getCity() : String
        + getZipCode() : String
    }

    class GreenSpaceMapper{
        +toDto(greenSpace : GreenSpace) : GreenSpaceDto
        +toDomain(greenSpaceDto : GreenSpaceDto) : GreenSpace
    }
    }

ListTaskSpaceUI ..> ListTaskController
AgendaEntry ..> UrgencyStatus
ListTaskController ..> Repositories: repositories
Repositories --> Repositories: instance
ListTaskController ..> GreenSpaceRepository
ListTaskController ..> EntryRepository
Repositories --> "1" GreenSpaceRepository
Repositories --> "1" EntryRepository
ListTaskController ..> GreenSpaceMapper

GreenSpaceMapper ..> GreenSpaceDto
EntryRepository --> AgendaEntry

@enduml
